fix: color contrast for numberscroll

--- a/termtyper/ui/css/base.css
+++ b/termtyper/ui/css/base.css
@@ -73,6 +73,7 @@ OptionItem:hover {
 NumberScroll {
   .scroll--background {
     background: $main-color;
+    color: $sub-alt-color;
   }
 }
 
